tooling/nargo_cli/tests/compile_failure/div_by_zero_constants/src/main.nr
use dep::std;

fn main() {
    let a: Field = 3 / 0;
    std::println(a);
}